# near-rust-nextjs-template

./: .gitignore  LICENSE  README.md  as-pect.config.js  package-lock.json  package.json
contract/: Cargo.toml
contract/src/: lib.rs
near/: near-setup.js
pages/: _app.js
