[package]
name = "near-nextjs-template"
version = "0.1.0"
edition = "2021"
authors = ["<your name> <your email>"]

[dependencies]
near-sdk = "4.0.0"

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
